Fix #27038 - [Bug] Set 'Synchronize with IDS' visible in view and datagrid

--- a/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_de.properties
+++ b/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_de.properties
@@ -31,6 +31,7 @@ label.info                                  = Info
 label.leaveblank                            = Leer lassen, wenn Sie das Passwort nicht \u00E4ndern m\u00F6chten
 label.moreuserinfo                          = Mehr \u00FCber diesen Benutzer
 label.newpassword                           = Neues Passwort
+label.no                                    = Nein
 label.oldpassword                           = Altes Passwort
 label.quota                                 = Kontingent
 label.removegroup                           = Gruppe entfernen
@@ -43,6 +44,7 @@ label.title-view                            = Benutzerprofil
 label.uploadStatus                          = Status
 label.usage                                 = Gebrauch
 label.verifypassword                        = Passwort pr\u00FCfen
+label.yes                                   = Ja
 
 message.authenticationdetails-failure = Wir konnten die Authentifizierungsangaben nicht abrufen.
 message.clear-photo-failure           = Wir konnten das Foto f\u00FCr den Benutzer nicht zur\u00FCcksetzen.
