--- a/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_es.properties
+++ b/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_es.properties
@@ -31,6 +31,7 @@ label.info                                  = Informaci\u00F3n
 label.leaveblank                            = D\u00E9jelo en blanco si no quiere cambiar la contrase\u00F1a
 label.moreuserinfo                          = M\u00E1s informaci\u00F3n sobre este usuario
 label.newpassword                           = Nueva contrase\u00F1a
+label.no                                    = No
 label.oldpassword                           = Contrase\u00F1a anterior
 label.quota                                 = Cuota
 label.removegroup                           = Eliminar grupo
@@ -43,6 +44,7 @@ label.title-view                            = Perfil de usuario
 label.uploadStatus                          = Estado
 label.usage                                 = Uso
 label.verifypassword                        = Verificar contrase\u00F1a
+label.yes                                   = S\u00ED
 
 message.authenticationdetails-failure = No se han podido recuperar los datos de autenticaci\u00F3n.
 message.clear-photo-failure           = No se ha podido restablecer la foto del usuario.
