--- a/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_fr.properties
+++ b/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_fr.properties
@@ -31,6 +31,7 @@ label.info                                  = Informations
 label.leaveblank                            = Laisser vide si vous ne voulez pas changer le mot de passe
 label.moreuserinfo                          = En savoir plus sur cet utilisateur
 label.newpassword                           = Nouveau mot de passe
+label.no                                    = Non
 label.oldpassword                           = Ancien mot de passe
 label.quota                                 = Quota
 label.removegroup                           = Supprimer le groupe
@@ -43,6 +44,7 @@ label.title-view                            = Profil de l'utilisateur
 label.uploadStatus                          = Statut
 label.usage                                 = Utilisation
 label.verifypassword                        = V\u00E9rifier le mot de passe
+label.yes                                   = Oui
 
 message.authenticationdetails-failure = Impossible de r\u00E9cup\u00E9rer les informations d'authentification.
 message.clear-photo-failure           = Impossible de r\u00E9initialiser la photo pour l'utilisateur.
