--- a/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_it.properties
+++ b/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_it.properties
@@ -31,6 +31,7 @@ label.info                                  = Informazioni
 label.leaveblank                            = Lasciare vuoto se non si desidera cambiare la password
 label.moreuserinfo                          = Altre informazioni su questo utente
 label.newpassword                           = Nuova password
+label.no                                    = No
 label.oldpassword                           = Vecchia password
 label.quota                                 = Quota
 label.removegroup                           = Rimuovi gruppo
@@ -43,6 +44,7 @@ label.title-view                            = Profilo utente
 label.uploadStatus                          = Stato
 label.usage                                 = Uso
 label.verifypassword                        = Verifica password
+label.yes                                   = S\u00CC
 
 message.authenticationdetails-failure = Impossibile recuperare i dettagli di autenticazione.
 message.clear-photo-failure           = Impossibile ripristinare la foto dell'utente.
