--- a/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_nb.properties
+++ b/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_nb.properties
@@ -31,6 +31,7 @@ label.info                                  = Info
 label.leaveblank                            = La st\u00E5 tomt hvis du ikke vil endre passordet
 label.moreuserinfo                          = Mer om denne brukeren
 label.newpassword                           = Nytt passord
+label.no                                    = Ingen
 label.oldpassword                           = Gammelt passord
 label.quota                                 = Kvote
 label.removegroup                           = Fjern gruppe
@@ -43,6 +44,7 @@ label.title-view                            = Brukerprofil
 label.uploadStatus                          = Status
 label.usage                                 = Bruk
 label.verifypassword                        = Bekreft passord
+label.yes                                   = Ja
 
 message.authenticationdetails-failure = Mislyktes i \u00E5 hente autoriseringsdetaljer.
 message.clear-photo-failure           = Mislyktes i \u00E5 tilbakestille fotoet for brukeren.
