--- a/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_nl.properties
+++ b/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_nl.properties
@@ -31,6 +31,7 @@ label.info                                  = Info
 label.leaveblank                            = Leeg laten als u het wachtwoord niet wilt wijzigen
 label.moreuserinfo                          = Meer informatie over deze gebruiker
 label.newpassword                           = Nieuw wachtwoord
+label.no                                    = Nee
 label.oldpassword                           = Oud wachtwoord
 label.quota                                 = Quota
 label.removegroup                           = Groep verwijderen
@@ -43,6 +44,7 @@ label.title-view                            = Gebruikersprofiel
 label.uploadStatus                          = Status
 label.usage                                 = Gebruik
 label.verifypassword                        = Wachtwoord bevestigen
+label.yes                                   = Ja
 
 message.authenticationdetails-failure = Kan geen verificatiegegevens ophalen.
 message.clear-photo-failure           = Kan de foto van de gebruiker niet opnieuw instellen.
