--- a/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_pt_BR.properties
+++ b/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_pt_BR.properties
@@ -31,6 +31,7 @@ label.info                                  = Informa\u00E7\u00F5es
 label.leaveblank                            = Deixar em branco se n\u00E3o desejar alterar a senha
 label.moreuserinfo                          = Mais sobre este usu\u00E1rio
 label.newpassword                           = Nova senha
+label.no                                    = N\u00E3o
 label.oldpassword                           = Senha antiga
 label.quota                                 = Cota
 label.removegroup                           = Remover grupo
@@ -43,6 +44,7 @@ label.title-view                            = Perfil de usu\u00E1rio
 label.uploadStatus                          = Status
 label.usage                                 = Uso
 label.verifypassword                        = Verificar senha
+label.yes                                   = Sim
 
 message.authenticationdetails-failure = N\u00E3o foi poss\u00EDvel recuperar os detalhes de autentica\u00E7\u00E3o.
 message.clear-photo-failure           = N\u00E3o foi poss\u00EDvel redefinir a foto para o usu\u00E1rio.
