--- a/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_ja.properties
+++ b/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_ja.properties
@@ -31,6 +31,7 @@ label.info                                  = \u60C5\u5831
 label.leaveblank                            = \u30D1\u30B9\u30EF\u30FC\u30C9\u3092\u5909\u66F4\u3057\u306A\u3044\u5834\u5408\u306F\u7A7A\u6B04\u306E\u307E\u307E\u306B\u3057\u3066\u304F\u3060\u3055\u3044
 label.moreuserinfo                          = \u3053\u306E\u30E6\u30FC\u30B6\u30FC\u306E\u8A73\u7D30\u60C5\u5831
 label.newpassword                           = \u65B0\u3057\u3044\u30D1\u30B9\u30EF\u30FC\u30C9
+label.no                                    = \u3044\u3044\u3048
 label.oldpassword                           = \u53E4\u3044\u30D1\u30B9\u30EF\u30FC\u30C9
 label.quota                                 = \u30AF\u30A9\u30FC\u30BF
 label.removegroup                           = \u30B0\u30EB\u30FC\u30D7\u306E\u524A\u9664
@@ -43,6 +44,7 @@ label.title-view                            = \u30E6\u30FC\u30B6\u30FC\u306E\u30
 label.uploadStatus                          = \u30B9\u30C6\u30FC\u30BF\u30B9
 label.usage                                 = \u4F7F\u7528\u91CF
 label.verifypassword                        = \u65B0\u3057\u3044\u30D1\u30B9\u30EF\u30FC\u30C9\u306E\u518D\u5165\u529B
+label.yes                                   = \u306F\u3044
 
 message.authenticationdetails-failure = \u8A8D\u8A3C\u60C5\u5831\u3092\u53D6\u5F97\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
 message.clear-photo-failure           = \u3053\u306E\u30E6\u30FC\u30B6\u30FC\u306E\u5199\u771F\u3092\u30EA\u30BB\u30C3\u30C8\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
