--- a/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_ru.properties
+++ b/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_ru.properties
@@ -31,6 +31,7 @@ label.info                                  = \u0418\u043D\u0444\u043E\u0440\u04
 label.leaveblank                            = \u041E\u0441\u0442\u0430\u0432\u044C\u0442\u0435 \u043F\u043E\u043B\u0435 \u043F\u0443\u0441\u0442\u044B\u043C, \u0435\u0441\u043B\u0438 \u043D\u0435 \u0436\u0435\u043B\u0430\u0435\u0442\u0435 \u043C\u0435\u043D\u044F\u0442\u044C \u043F\u0430\u0440\u043E\u043B\u044C
 label.moreuserinfo                          = \u041F\u043E\u0434\u0440\u043E\u0431\u043D\u0435\u0435 \u043E \u0434\u0430\u043D\u043D\u043E\u043C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435
 label.newpassword                           = \u041D\u043E\u0432\u044B\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
+label.no                                    = \u041D\u0435\u0442
 label.oldpassword                           = \u0421\u0442\u0430\u0440\u044B\u0439 \u043F\u0430\u0440\u043E\u043B\u044C
 label.quota                                 = \u041A\u0432\u043E\u0442\u0430
 label.removegroup                           = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0433\u0440\u0443\u043F\u043F\u0443
@@ -43,6 +44,7 @@ label.title-view                            = \u041F\u0440\u043E\u0444\u0438\u04
 label.uploadStatus                          = \u0421\u0442\u0430\u0442\u0443\u0441
 label.usage                                 = \u0418\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u043D\u0438\u0435
 label.verifypassword                        = \u041F\u0440\u043E\u0432\u0435\u0440\u043A\u0430 \u043F\u0430\u0440\u043E\u043B\u044F
+label.yes                                   = \u0414\u0430
 
 message.authenticationdetails-failure = \u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u043F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u0432\u0435\u0434\u0435\u043D\u0438\u044F \u043E\u0431 \u0430\u0443\u0442\u0435\u043D\u0442\u0438\u0444\u0438\u043A\u0430\u0446\u0438\u0438.
 message.clear-photo-failure           = \u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u0441\u0431\u0440\u043E\u0441\u0438\u0442\u044C \u0444\u043E\u0442\u043E\u0433\u0440\u0430\u0444\u0438\u044E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F.
