--- a/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_zh_CN.properties
+++ b/becpg-share/src/main/assembly/config/alfresco/site-webscripts/org/alfresco/components/console/usersgroups/users.get_zh_CN.properties
@@ -31,6 +31,7 @@ label.info                                  = \u4FE1\u606F
 label.leaveblank                            = \u5982\u679C\u4E0D\u60F3\u66F4\u6539\u5BC6\u7801\uFF0C\u4FDD\u7559\u7A7A\u767D
 label.moreuserinfo                          = \u6709\u5173\u6B64\u7528\u6237\u7684\u66F4\u591A\u4FE1\u606F
 label.newpassword                           = \u65B0\u5BC6\u7801
+label.no                                    = \u4E0D
 label.oldpassword                           = \u65E7\u5BC6\u7801
 label.quota                                 = \u914D\u989D
 label.removegroup                           = \u79FB\u9664\u7FA4\u7EC4
@@ -43,6 +44,7 @@ label.title-view                            = \u7528\u6237\u7B80\u51B5
 label.uploadStatus                          = \u72B6\u6001
 label.usage                                 = \u4F7F\u7528\u91CF
 label.verifypassword                        = \u9A8C\u8BC1\u5BC6\u7801
+label.yes                                   = \u662F\u7684
 
 message.authenticationdetails-failure = \u6211\u4EEC\u65E0\u6CD5\u68C0\u7D22\u8EAB\u4EFD\u9A8C\u8BC1\u8BE6\u7EC6\u4FE1\u606F\u3002
 message.clear-photo-failure           = \u6211\u4EEC\u65E0\u6CD5\u4E3A\u6B64\u7528\u6237\u91CD\u8BBE\u7167\u7247\u3002
