InProgress #26837 - [Feature] Add GS1 fields

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -24,6 +24,7 @@ gs1_gs1Model.aspect.gs1_seasonalAspect.title                                    
 gs1_gs1Model.aspect.gs1_temperatureMeasurementAspect.title                                = Temp\u00E9rature
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.description                      = Le type de conteneur utilis\u00E9 pour la boisson alcoolis\u00E9e.
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.title                            = Conteneurs de boisson alcoolis\u00E9e
+gs1_gs1Model.association.gs1_catchCountryCode.title                                       = Pays de capture
 gs1_gs1Model.association.gs1_cplProduct.title                                             = Produit
 gs1_gs1Model.association.gs1_dutyFeeTaxCountry.description                                = Le pays dans lequel des droits, droits ou taxes peuvent s'appliquer pour un article commercial.
 gs1_gs1Model.association.gs1_dutyFeeTaxCountry.title                                      = Pays
@@ -40,6 +41,7 @@ gs1_gs1Model.property.gs1_additionalTradeItemClassification1.title              
 gs1_gs1Model.property.gs1_additionalTradeItemClassification2.title                        = Classification de l'article commercial 2
 gs1_gs1Model.property.gs1_additionalTradeItemClassificationText1.title                    = Description de la classification de l'article commercial
 gs1_gs1Model.property.gs1_additionalTradeItemClassificationText2.title                    = Description de la classification de l'article commercial 2
+gs1_gs1Model.property.gs1_additionalTradeItemIdentification.title                    	  = Identification de l'article commercial
 gs1_gs1Model.property.gs1_alcoholBeverageAge.description                                  = La p\u00E9riode pendant laquelle le produit alcoolis\u00E9 a vieilli. Par exemple, un whisky \u00E2g\u00E9 de 12 ans
 gs1_gs1Model.property.gs1_alcoholBeverageAge.title                                        = \u00C2ge de la boisson alcoolis\u00E9e (M)
 gs1_gs1Model.property.gs1_alcoholBeverageDistilledFromCode.description                    = Le ou les principaux ingr\u00E9dients \u00E0 partir desquels le produit alcoolis\u00E9 est \u00E9t\u00E9 distill\u00E9e. Exemple : Seigle, Pomme de terre, Canne \u00E0 sucre.
@@ -144,8 +146,10 @@ gs1_gs1Model.property.gs1_innerPackPerBox.title                                 
 gs1_gs1Model.property.gs1_innerPackTypeCode.title                                         = Type d'emballage / conditionnement
 gs1_gs1Model.property.gs1_innerPackWeight.title                                           = Poids brut sous cond (kg)
 gs1_gs1Model.property.gs1_innerPackWidth.title                                            = Largeur (mm)
+gs1_gs1Model.property.gs1_isAllergenRelevantDataProvided.title							  = Les donn\u00E9es sur les allerg\u00E8nes sont-elles fournies ?
 gs1_gs1Model.property.gs1_isCaskStrength.description                                      = Indication que la boisson alcoolis\u00E9e n'a pas \u00E9t\u00E9 coup\u00E9e, g\u00E9n\u00E9ralement avec de l'eau, apr\u00E8s maturation. Le produit r\u00E9sultant a le m\u00EAme teneur en alcool que lorsqu'il a \u00E9t\u00E9 retir\u00E9 du f\u00FBt/f\u00FBt de maturation
 gs1_gs1Model.property.gs1_isCaskStrength.title                                            = Non dilu\u00E9e?
+gs1_gs1Model.property.gs1_isDangerousSubstance.title                                      = Y a-t-il une substance dangereuse ?
 gs1_gs1Model.property.gs1_isPackagingMarkedReturnable.title                               = Mention "colis / conditionnement retournable"
 gs1_gs1Model.property.gs1_isPriceOnPack.title                                             = Prix marqu\u00E9 sur le colis
 gs1_gs1Model.property.gs1_isPublicated.title                                              = Publier vers GS1 (oui/non) 
@@ -234,6 +238,7 @@ gs1_gs1Model.property.gs1_promotionTypeCode.description                         
 gs1_gs1Model.property.gs1_promotionTypeCode.title                                         = Type de promotion
 gs1_gs1Model.property.gs1_provenanceStatement.title                                       = Provenance
 gs1_gs1Model.property.gs1_publicationDate.title                                           = Date de publication
+gs1_gs1Model.property.gs1_recyclingInstructions.title									  = Instructions de recyclage
 gs1_gs1Model.property.gs1_referencedTradeItemEanCode.title                                = GTIN de l'article li\u00E9
 gs1_gs1Model.property.gs1_referencedTradeItemTypeCode.title                               = Nature du produit r\u00E9f\u00E9renc\u00E9
 gs1_gs1Model.property.gs1_rennetTypeCode.description                                      = Le type de pr\u00E9sure utilis\u00E9 pour la coagulation. L'enzyme de pr\u00E9sure est utilis\u00E9e pour la coagulation de la masse de fromage. La pr\u00E9sure et des enzymes similaires peuvent \u00EAtre obtenus par diff\u00E9rents processus.
@@ -272,6 +277,7 @@ gs1_gs1Model.property.gs1_startAvailabilityDateTime.title                       
 gs1_gs1Model.property.gs1_storageStateCode.title                                          = \u00C9tat de stockage
 gs1_gs1Model.property.gs1_surfaceOfCheeseAtEndOfRipeningCode.description                  = La repr\u00E9sentation de la pr\u00E9sence ou non d'une cro\u00FBte \u00E0 la fin du processus de maturation. La cro\u00FBte est la coque ext\u00E9rieure du fromage qui se forme pendant le processus de fabrication du fromage. Les cro\u00FBtes sont naturelles et g\u00E9n\u00E9ralement comestibles, contrairement \u00E0 d'autres rev\u00EAtements, tels que la cire et le tissu, qui sont non comestibles.
 gs1_gs1Model.property.gs1_surfaceOfCheeseAtEndOfRipeningCode.title                        = Surface du fromage en fin de maturation
+gs1_gs1Model.property.gs1_sustainabilityFeatureCode.title                        		  = Caract\u00E9ristique de durabilit\u00E9
 gs1_gs1Model.property.gs1_sweetnessLevelOfAlcoholicBeverageCode.description               = Indique le terme descriptif utilis\u00E9 par le produit fabricant pour identifier la douceur de l'alcool boisson. Ceux-ci sont parfois plac\u00E9s sur une \u00E9tiquette. Dans certaines march\u00E9s, le terme est bas\u00E9 sur la quantit\u00E9 de sucre contenu selon la r\u00E9glementation locale.
 gs1_gs1Model.property.gs1_sweetnessLevelOfAlcoholicBeverageCode.title                     = Niveau de douceur de la boisson alcoolis\u00E9e
 gs1_gs1Model.property.gs1_targetMarketCode.title                                          = Code
