--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -113,9 +113,11 @@ gs1_gs1Model.property.gs1_discontinuedDateTime.description                      
 gs1_gs1Model.property.gs1_discontinuedDateTime.title                                      = Date d'abandon
 gs1_gs1Model.property.gs1_dutyFeeTaxAmount.title                                          = Montant
 gs1_gs1Model.property.gs1_dutyFeeTaxAmountUnit.title                                      = Monnaie
-gs1_gs1Model.property.gs1_dutyFeeTaxCategoryCode.title                                    = Type de taxe
+gs1_gs1Model.property.gs1_dutyFeeTaxAgencyCode.title                                      = Organisme fiscal
+gs1_gs1Model.property.gs1_dutyFeeTaxCategoryCode.title                                    = Cat\u00E9gorie fiscale
 gs1_gs1Model.property.gs1_dutyFeeTaxCode.description                                      = Identification du type de droit ou de taxe ou de taxe applicable a l'article commercial. Cela variera en fonction du march\u00E9 cible.
 gs1_gs1Model.property.gs1_dutyFeeTaxCode.title                                            = Code
+gs1_gs1Model.property.gs1_dutyFeeTaxTypeCode.title                                    	  = Type de taxe
 gs1_gs1Model.property.gs1_dutyFeeTaxRate.title                                            = Taux
 gs1_gs1Model.property.gs1_eanCodeInnerPack.title                                          = GTIN/EAN sous cond
 gs1_gs1Model.property.gs1_eanCodePrice.title                                              = GTIN/EAN code prix
