Fix #26837 - [Feature] New gs1 fieds fixes

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -25,6 +25,7 @@ gs1_gs1Model.aspect.gs1_temperatureMeasurementAspect.title                      
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.description                      = Le type de conteneur utilis\u00E9 pour la boisson alcoolis\u00E9e.
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.title                            = Conteneurs de boisson alcoolis\u00E9e
 gs1_gs1Model.association.gs1_catchCountryCode.title                                       = Pays de capture
+gs1_gs1Model.association.gs1_contact.title                                             	  = Contact
 gs1_gs1Model.association.gs1_cplProduct.title                                             = Produit
 gs1_gs1Model.association.gs1_dutyFeeTaxCountry.description                                = Le pays dans lequel des droits, droits ou taxes peuvent s'appliquer pour un article commercial.
 gs1_gs1Model.association.gs1_dutyFeeTaxCountry.title                                      = Pays
