Fix #24234 - [Feature] Add survey view

--- a/becpg-project/becpg-project-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-charact-views/survey-view.get_fr.properties
+++ b/becpg-project/becpg-project-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-charact-views/survey-view.get_fr.properties
@@ -1,3 +1,4 @@
 surf.include.resources = org/alfresco/modules/entity-datagrid/entity-datagrid.get
 
-message.survey.success =  Survey saved successfully
+
+message.survey.success = Questionnaire enregistré avec succès
