--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-data-lists/entity-toolbar.get_en.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-data-lists/entity-toolbar.get_en.properties
@@ -46,6 +46,7 @@ button.sub-project.description               = Create sub project
 button.toggle-critical-path.description      = Show critical path
 button.toggle-gantt.description              = Toggle Gantt chart
 button.toggle-target-dates.description       = Toggle target dates
+button.toggle-survey.description        = Toggle survey view
 
 label.edit-saved-search.title         = Edit saved search
 label.edit-variant.title              = Edit current variant
