--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-data-lists/entity-toolbar.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/entity-data-lists/entity-toolbar.get_fr.properties
@@ -25,6 +25,7 @@ button.entity-print-report.description       = Imprimer le rapport
 button.entity-refresh-reports                = &nbsp;
 button.entity-refresh-reports.description    = G\u00E9n\u00E9rer les rapports
 button.entity-reports-parameters             = &nbsp;
+button.toggle-survey.description             = Vue questionnaire
 button.entity-reports-parameters.description = Editer les param\u00E8tres  des rapports
 button.entity-view-details                   = Visualiser les d\u00E9tails
 button.entity-view-details.description       = Visualiser les d\u00E9tails
