--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_fr.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_fr.properties
@@ -22,6 +22,7 @@ survey_surveymodel.association.survey_advSearchSurveyQuestion9.title  = Question
 survey_surveymodel.association.survey_fsLinkedCharactRefs.title       = Charact\u00E9ristiques li\u00E9es
 survey_surveymodel.association.survey_fsLinkedHierarchy.title         = Familles li\u00E9es
 survey_surveymodel.association.survey_nextQuestion.title              = Question suivante
+survey_surveymodel.association.survey_scoreCriterion.title            = Crit\u00E8re
 survey_surveymodel.association.survey_slChoices.title                 = Choix retenu
 survey_surveymodel.association.survey_slQuestion.title                = Question
 survey_surveymodel.property.survey_fsLinkedTypes.title                = Types d'entit\u00E9
@@ -38,7 +39,6 @@ survey_surveymodel.property.survey_questionUrl.title                  = Url
 survey_surveymodel.property.survey_responseCommentLabel.title         = Label du commentaire
 survey_surveymodel.property.survey_responseCommentType.title          = Type de commentaire
 survey_surveymodel.property.survey_responseType.title                 = Type de r\u00E9ponse
-survey_surveymodel.property.survey_scoreCriterion.title               = Crit\u00E8re
 survey_surveymodel.property.survey_slComment.title                    = Commentaire
 survey_surveymodel.property.survey_slResponse.title                   = Autre r\u00E9ponse
 survey_surveymodel.type.survey_surveyList.description                 = Permet d'ajouter un questionnaire sur une entit\u00E9
