Fix #27823 - [Bug] Fix translations in project-details

--- a/becpg-project/becpg-project-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/project-details/project-details.get_fr.properties
+++ b/becpg-project/becpg-project-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/project-details/project-details.get_fr.properties
@@ -1,39 +1,39 @@
 
-projectDetails.nextMilestoneTask.noTaskStartDate = La date de d\u00E9but de la t\u00E2che n'est pas renseign\u00E9e
+projectDetails.nextMilestoneTask.noTaskStartDate = La date du d\u00E9but de la t\u00E2che n'est pas renseign\u00E9e
 
 projectdetails.comments                       = Commentaires
-projectdetails.end                            = Fin
+projectdetails.end                            = Fin 
 projectdetails.graph.xaxis                    = Date
 projectdetails.graph.yaxis                    = Nombre d'activit\u00E9s
-projectdetails.header.showstatus              = Voir mon statut
-projectdetails.header.status                  = Statut du projet
-projectdetails.legend.acitivityNumber         = Nombre d'activit\u00E9s
-projectdetails.legend.completionDate          = Date de fin
-projectdetails.legend.completionwork          = de travail termin\u00E9
-projectdetails.legend.inprogresswork          = de travail en cours
-projectdetails.legend.overdue                 = de travail en retard
-projectdetails.legend.passeddays              = Jours \u00E9coul\u00E9s
-projectdetails.legend.realised                = R\u00E9alis\u00E9s
-projectdetails.legend.remainingdays           = Jours restants
-projectdetails.legend.startday                = Date de d\u00E9but
-projectdetails.milestones.nextmilestones      = Prochains jalons
-projectdetails.noMilestones                   = Aucun jalon \u00E0 venir
+projectdetails.header.showstatus              = Voir mon status
+projectdetails.header.status                  = Statut du Projet
+projectdetails.legend.acitivityNumber         = Nombre d'activit\u00E9
+projectdetails.legend.completionDate          = Fin
+projectdetails.legend.completionwork          = du travail est termin\u00E9
+projectdetails.legend.inprogresswork          = du travail est ouvert
+projectdetails.legend.overdue                 = du travail en retard 
+projectdetails.legend.passeddays              = jours pass\u00E9s
+projectdetails.legend.realised                = r\u00E9alis\u00E9s
+projectdetails.legend.remainingdays           = jours restants
+projectdetails.legend.startday                = D\u00E9but
+projectdetails.milestones.nextmilestones      = Prochain jalon
+projectdetails.noMilestones                   = Vous n'avez aucun jalon \u00E0 venir
 projectdetails.noduedate                      = La date de fin n'est pas renseign\u00E9e
 projectdetails.nosatartdate                   = La date de d\u00E9but du projet n'est pas renseign\u00E9e
-projectdetails.progressstatement.milestones   = Jalons
+projectdetails.progressstatement.milestones   = jalons
 projectdetails.progressstatement.notasks      = Aucune t\u00E2che pr\u00E9vue
-projectdetails.progressstatement.tasks        = T\u00E2ches
-projectdetails.progressstatement.title        = \u00C9tat d'avancement du projet
+projectdetails.progressstatement.tasks        = t\u00E2ches
+projectdetails.progressstatement.title        = Etat d'avancement du projet
 projectdetails.project.state.Cancelled        = Annul\u00E9
 projectdetails.project.state.Completed        = Termin\u00E9
 projectdetails.project.state.InProgress       = En cours
 projectdetails.project.state.OnHold           = En attente
 projectdetails.project.state.Planned          = Planifi\u00E9
-projectdetails.projectevolution.dayslate      = Jours de retard
-projectdetails.projectevolution.dueDate       = Date de fin pr\u00E9vue
-projectdetails.projectevolution.remainingDays = Jours restants
-projectdetails.projectevolution.text1         = Le projet est
-projectdetails.projectevolution.title         = \u00C9volution du projet
+projectdetails.projectevolution.dayslate      = jours en retard
+projectdetails.projectevolution.dueDate       = Fin pr\u00E9vue
+projectdetails.projectevolution.remainingDays = jours restants
+projectdetails.projectevolution.text1         = Le projet est 
+projectdetails.projectevolution.title         = Evolution du projet
 projectdetails.start                          = D\u00E9but
 projectdetails.tasklist.allTasks              = Toutes les t\u00E2ches
 projectdetails.tasklist.comming               = \u00C0 venir
